# atualiza_certificados

./: .gitignore  Cargo.toml  README.md
src/: certificados.rs  lib.rs  main.rs
src/certificados/: errors.rs
